Organized games into folders. Updated the block break game to include special abilities.

--- a/Block_Break/Block_Break.html
+++ b/Block_Break/Block_Break.html
@@ -13,9 +13,11 @@
 			<button id="sub_color_button" type="button">Remove Color</button> <br>
 			<div id="color_div">
 			</div>
-
 			<button id="shuffle_button" type="button">Shuffle</button> <br>
+			<input id="area_powerup_input" type="checkbox" disabled>Area PowerUp</input>
+			<input id="row_powerup_input" type="checkbox" disabled>Row PowerUp</input>
+			<input id="column_powerup_input" type="checkbox" disabled>Column PowerUp</input>
 		</div>
-        <script src="./bundle.js"></script>
+        <script src="./Block_Break.js"></script>
     </body>
 </html>
