--- a/index.html
+++ b/index.html
@@ -12,19 +12,23 @@
         </p>
         <button id="slide_puzzle_button" type="button">Slide Puzzle</button>
         <button id="block_break_button" type="button">Block Break</button>
-        <script src="./functions.js"></script>
         <script type="text/javascript">
+
+                function $(id)
+                {
+                    return document.getElementById(id);
+                }
 
                 var slide_puzzle_button = $("slide_puzzle_button");
             	slide_puzzle_button.addEventListener("click", function()
                 {
-                    location.href = "Slide_Puzzle.html";
+                    location.href = "./Slide_Puzzle/Slide_Puzzle.html";
                 });
 
                 var block_break_button = $("block_break_button");
             	block_break_button.addEventListener("click", function()
                 {
-                    location.href = "Block_Break.html";
+                    location.href = "./Block_Break/Block_Break.html";
                 });
         
         </script>
